--- a/webserver/views/dashboard.jade
+++ b/webserver/views/dashboard.jade
@@ -57,24 +57,13 @@ html(lang='zh-CN')
                             .tn.aol
                                 input.form-control(type="text", value="01/01/15 - 12/31/15", data-provide="datepicker")
                     hr
+                    h2.sub-header 流量监测图
                     .row.placeholders
-                        .col-xs-6.col-sm-3.placeholder
-                            img.img-responsive(data-src='holder.js/200x200/auto/sky', alt='Generic placeholder thumbnail')
-                            h4 图表
-                            span.text-muted Something else
-                        .col-xs-6.col-sm-3.placeholder
-                            img.img-responsive(data-src='holder.js/200x200/auto/vine', alt='Generic placeholder thumbnail')
-                            h4 Label
-                            span.text-muted Something else
-                        .col-xs-6.col-sm-3.placeholder
-                            img.img-responsive(data-src='holder.js/200x200/auto/sky', alt='Generic placeholder thumbnail')
-                            h4 Label
-                            span.text-muted Something else
-                        .col-xs-6.col-sm-3.placeholder
-                            img.img-responsive(data-src='holder.js/200x200/auto/vine', alt='Generic placeholder thumbnail')
-                            h4 Label
-                            span.text-muted Something else
-                    h2.sub-header Section title
+                        .col-xs-6.col-sm-12.placeholder
+                            //img.img-responsive(data-src='holder.js/200x200/auto/sky', alt='Generic placeholder thumbnail')
+                            h4#container(min-width='310px',height='400px')
+                            span.text-muted
+                    h2.sub-header 流量监测表
                     .table-responsive
                         table#example.table.table-striped.table-bordered(cellpadding='0', cellspacing='0', border='0')
                             thead
@@ -106,6 +95,74 @@ html(lang='zh-CN')
         script(src='vendors/datatables/js/jquery.dataTables.min.js')
         script(src='assets/scripts.js')
         script(src='assets/DT_bootstrap.js')
+        script(src='https://code.highcharts.com/highcharts.js')
+        script(src='https://code.highcharts.com/highcharts-3d.js')
+        script(src='https://code.highcharts.com/modules/exporting.js')
+        script.
+            $(function () {
+                $('#container').highcharts({
+                    title: {
+                        text: 'Combination chart'
+                    },
+                    xAxis: {
+                        categories: ['Apples', 'Oranges', 'Pears', 'Bananas', 'Plums']
+                    },
+                    labels: {
+                        items: [{
+                            html: 'Total fruit consumption',
+                            style: {
+                                left: '50px',
+                                top: '18px',
+                                color: (Highcharts.theme && Highcharts.theme.textColor) || 'black'
+                            }
+                        }]
+                    },
+                    series: [{
+                        type: 'column',
+                        name: 'Jane',
+                        data: [3, 2, 1, 3, 4]
+                    }, {
+                        type: 'column',
+                        name: 'John',
+                        data: [2, 3, 5, 7, 6]
+                    }, {
+                        type: 'column',
+                        name: 'Joe',
+                        data: [4, 3, 3, 9, 0]
+                    }, {
+                        type: 'spline',
+                        name: 'Average',
+                        data: [3, 2.67, 3, 6.33, 3.33],
+                        marker: {
+                            lineWidth: 2,
+                            lineColor: Highcharts.getOptions().colors[3],
+                            fillColor: 'white'
+                        }
+                    }, {
+                        type: 'pie',
+                        name: 'Total consumption',
+                        data: [{
+                            name: 'Jane',
+                            y: 13,
+                            color: Highcharts.getOptions().colors[0] // Jane's color
+                        }, {
+                            name: 'John',
+                            y: 23,
+                            color: Highcharts.getOptions().colors[1] // John's color
+                        }, {
+                            name: 'Joe',
+                            y: 19,
+                            color: Highcharts.getOptions().colors[2] // Joe's color
+                        }],
+                        center: [100, 80],
+                        size: 100,
+                        showInLegend: false,
+                        dataLabels: {
+                            enabled: false
+                        }
+                    }]
+                });
+            });
         script.
             /* Formatting function for row details - modify as you need */
             function format(d) {
