--- a/webserver/views/dashboard.jade
+++ b/webserver/views/dashboard.jade
@@ -41,17 +41,12 @@ html(lang='zh-CN')
                             ul.nav.nav-stacked.of
                                 li.tq Dashboards
                                 li.active
-                                    a(href="dashboard.html") tables
+                                    a(href="dashboard.html") table
                                 li
-                                    a(href="1") 2
-                                li
-                                    a(href="1") 3
-                                li
-                                    a(href="1") 4
+                                    a(href="tables.html") chart
                 .hc.aps
                     .apa
                         .apb
-                            h6.apd Dashboards
                             h2.apc 网络异常流量检测
                         .ob.ape
                             .tn.aol
