fix dashboard interface display problem

--- a/webserver/views/cover.jade
+++ b/webserver/views/cover.jade
@@ -4,7 +4,6 @@ html(lang='zh-CN')
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        // 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！
         meta(name='description', content='')
         meta(name='author', content='')
         link(rel='icon', href='../../favicon.ico')
@@ -27,7 +26,7 @@ html(lang='zh-CN')
                 .cover-container
                     .masthead.clearfix
                         .inner
-                            h3.masthead-brand Network Abnormal Traffic Detector
+                            h3.masthead-brand Night Watch
                             nav
                                 ul.nav.masthead-nav
                                     li.active
@@ -50,10 +49,6 @@ html(lang='zh-CN')
                                 | , by
                                 a(href='https://twitter.com/mdo') @mdo
                                 | .
-        //
-          Bootstrap core JavaScript
-          ==================================================
-        // Placed at the end of the document so the pages load faster
         script(src='//cdn.bootcss.com/jquery/1.11.3/jquery.min.js')
         script(src='//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js')
         // IE10 viewport hack for Surface/desktop Windows 8 bug
